@startuml

skinparam classAttributeIconSize 0
skinparam classFontSize 14
skinparam classFontName Arial
skinparam classBackgroundColor #F0F8FF
skinparam classBorderColor #4169E1
skinparam arrowColor #2F4F4F
skinparam packageBackgroundColor #EEEEEE

' =================== PAQUETE AUTENTICACIÓN Y USUARIOS ===================
package "Autenticación y Usuarios" {
    class users {
        +id: bigserial
        -uuid: varchar(255)
        -usernick: varchar(255) <<unique>>
        -email: varchar(255)
        -email_verified_at: timestamp
        -password: varchar(255)
        -remember_token: varchar(100)
        -created_at: timestamp
        -updated_at: timestamp
    }

    class sessions {
        +id: varchar(255)
        -user_id: bigint
        -ip_address: varchar(45)
        -user_agent: text
        -payload: text
        -last_activity: integer
    }

    class password_reset_tokens {
        +email: varchar(255)
        -token: varchar(255)
        -created_at: timestamp
    }
}

' =================== PAQUETE PERMISOS ===================
package "Sistema de Permisos" {
    class permissions {
        +id: bigserial
        -name: varchar(255)
        -guard_name: varchar(255)
        -created_at: timestamp
        -updated_at: timestamp
    }

    class roles {
        +id: bigserial
        -name: varchar(255)
        -guard_name: varchar(255)
        -created_at: timestamp
        -updated_at: timestamp
    }

    class model_has_permissions {
        +permission_id: bigint
        +model_type: varchar(255)
        +model_id: bigint
    }

    class model_has_roles {
        +role_id: bigint
        +model_type: varchar(255)
        +model_id: bigint
    }

    class role_has_permissions {
        +permission_id: bigint
        +role_id: bigint
    }
}

' =================== PAQUETE ACADÉMICO ===================
package "Sistema Académico" {
    class cursos {
        +id: bigserial
        -nombre: varchar(255)
        -descripcion: text
        -profesor_id: bigint
        -codigo: varchar(255) <<unique>>
        -estado: varchar(255)
        -fecha_inicio: date
        -fecha_fin: date
        -capacidad_maxima: integer
        -created_at: timestamp
        -updated_at: timestamp
    }

    class curso_estudiante {
        +id: bigserial
        -curso_id: bigint
        -estudiante_id: bigint
        -fecha_inscripcion: date
        -estado: varchar(255)
        -created_at: timestamp
        -updated_at: timestamp
    }

    class contenidos {
        +id: bigserial
        -titulo: varchar(255)
        -descripcion: text
        -fecha_creacion: date
        -fecha_limite: date
        -creador_id: bigint
        -curso_id: bigint
        -tipo: varchar(255)
        -estado: varchar(255)
        -created_at: timestamp
        -updated_at: timestamp
    }

    class evaluaciones {
        +id: bigserial
        -contenido_id: bigint
        -tipo_evaluacion: varchar(255)
        -puntuacion_total: integer
        -tiempo_limite: integer
        -calificacion_automatica: boolean
        -mostrar_respuestas: boolean
        -permite_reintento: boolean
        -max_reintentos: integer
        -created_at: timestamp
        -updated_at: timestamp
    }

    class calificaciones {
        +id: bigserial
        -trabajo_id: bigint
        -puntaje: double precision
        -comentario: text
        -fecha_calificacion: timestamp
        -evaluador_id: bigint
        -criterios_evaluacion: json
        -created_at: timestamp
        -updated_at: timestamp
    }
}

' =================== PAQUETE RECURSOS EDUCATIVOS ===================
package "Recursos Educativos" {
    class materiales_apoyo {
        +id: bigserial
        -titulo: varchar(255)
        -tipo: varchar(255)
        -url: varchar(255)
        -descripcion: text
        -nivel_dificultad: integer
        -conceptos_relacionados: json
        -activo: boolean
        -created_at: timestamp
        -updated_at: timestamp
    }

    class recursos {
        +id: bigserial
        -nombre: varchar(255)
        -tipo: varchar(255)
        -url: varchar(255)
        -descripcion: text
        -archivo_path: varchar(255)
        -tamaño: integer
        -created_at: timestamp
        -updated_at: timestamp
    }

    class contenido_recurso {
        +id: bigserial
        -contenido_id: bigint
        -recurso_id: bigint
        -created_at: timestamp
        -updated_at: timestamp
    }
}

' =================== PAQUETE ORIENTACIÓN VOCACIONAL ===================
package "Orientación Vocacional" {
    class carreras {
        +id: bigserial
        -nombre: varchar(255)
        -descripcion: text
        -nivel_educativo: varchar(255)
        -duracion_anos: double precision
        -areas_conocimiento: json
        -perfil_ideal: json
        -oportunidades_laborales: json
        -activo: boolean
        -created_at: timestamp
        -updated_at: timestamp
    }

    class perfiles_vocacionales {
        +id: bigserial
        -estudiante_id: bigint
        -intereses: json
        -habilidades: json
        -personalidad: json
        -aptitudes: json
        -fecha_creacion: timestamp
        -fecha_actualizacion: timestamp
        -created_at: timestamp
        -updated_at: timestamp
    }

    class tests_vocacionales {
        +id: bigserial
        -nombre: varchar(255)
        -descripcion: text
        -duracion_estimada: integer
        -activo: boolean
        -created_at: timestamp
        -updated_at: timestamp
    }

    class categorias_test {
        +id: bigserial
        -test_vocacional_id: bigint
        -nombre: varchar(255)
        -descripcion: text
        -orden: integer
        -created_at: timestamp
        -updated_at: timestamp
    }

    class preguntas_test {
        +id: bigserial
        -categoria_test_id: bigint
        -enunciado: text
        -tipo: varchar(255)
        -opciones: json
        -orden: integer
        -created_at: timestamp
        -updated_at: timestamp
    }
}

' =================== PAQUETE NOTIFICACIONES ===================
package "Notificaciones" {
    class notificaciones {
        +id: bigserial
        -titulo: varchar(255)
        -contenido: text
        -fecha: timestamp
        -destinatario_id: bigint
        -leido: boolean
        -tipo: varchar(255)
        -datos_adicionales: json
        -created_at: timestamp
        -updated_at: timestamp
    }
}

' =================== RELACIONES ===================

' Relaciones de Autenticación
users -- sessions
users -- password_reset_tokens

' Relaciones de Permisos
permissions -- model_has_permissions
permissions -- role_has_permissions
roles -- model_has_roles
roles -- role_has_permissions

' Relaciones Académicas
cursos "1" --o{ contenidos : "tiene"
cursos "1" --o{ curso_estudiante : "inscribe"
contenidos "1" --o{ evaluaciones : "tiene"
evaluaciones "1" --o{ calificaciones : "recibe"

' Relaciones de Recursos
contenidos "1" --o{ contenido_recurso : "usa"
recursos "1" --o{ contenido_recurso : "es usado en"
materiales_apoyo "1" --o{ "recomendaciones_material" : "es recomendado"

' Relaciones Vocacionales
tests_vocacionales "1" --o{ categorias_test : "contiene"
categorias_test "1" --o{ preguntas_test : "tiene"
users "1" --o{ perfiles_vocacionales : "tiene perfil"
carreras "1" --o{ "recomendaciones_carrera" : "es recomendada"

' Relaciones de Notificaciones
users "1" --o{ notificaciones : "recibe"

@enduml